Hasta la línea 883

--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -2563,7 +2563,7 @@
 	volume = {7},
 	pages = {648--663},
 	number = {2},
-	url = {http://dx.doi.org/10.1109/JSTARS.2013.2266319}
+	doi = {10.1109/JSTARS.2013.2266319}
 }
 @ARTICLE{Nelder65,
 	author = {J. A. Nelder and R. Mead},
@@ -4508,7 +4508,7 @@
 	pages = {75--88},
 	publisher = {The Institute of Mathematical Statistics},
 	title = {The Minimum Distance Method},
-	url = {http://dx.doi.org/10.1214/aoms/1177707038},
+	doi = {10.1214/aoms/1177707038},
 	volume = {28},
 	year = {1957}
 }
@@ -4531,7 +4531,6 @@
 	pages =  {203--217},
 	publisher =  {The Institute of Mathematical Statistics},
 	title = {Estimation by the Minimum Distance Method in Nonparametric Stochastic Difference Equations},
-	url =  {https://doi.org/10.1214/aoms/1177728782},
 	volume =  {25},
 	year =  {1954}
 }
@@ -4595,10 +4594,8 @@
 	volume = {30},
 	year = {1968}
 }
-@Article{,
-}
-@Comment{jabref-meta: databaseType:bibtex;}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 @article{Vijay2011,
 	author = {Kumar, V. and Venkataraman, G.},
 	title = {SAR interferometric coherence analysis for snow cover mapping in the western Himalayan region},
@@ -4608,7 +4605,7 @@
 	pages = {78-90},
 	year = {2011},
 	doi = {10.1080/17538940903521591},
-	URL = {http://dx.doi.org/10.1080/17538940903521591},
+	doi = {10.1080/17538940903521591},
 	eprint = {http://dx.doi.org/10.1080/17538940903521591}
 }
 @article{Yinghui2017,
@@ -4620,7 +4617,6 @@
 	pages = {1-17},
 	year = {2017},
 	doi = {10.1080/17538947.2017.1299806},
-	URL = {http://dx.doi.org/10.1080/17538947.2017.1299806},
 	eprint = {http://dx.doi.org/10.1080/17538947.2017.1299806}
 }
 @article{Abdikan2014,
@@ -4632,7 +4628,6 @@
 	pages = {671-687},
 	year = {2014},
 	doi = {10.1080/17538947.2012.748846},
-	URL = {http://dx.doi.org/10.1080/17538947.2012.748846},
 	eprint = {http://dx.doi.org/10.1080/17538947.2012.748846}
 }
 @article{Brisco2013,
@@ -4644,8 +4639,6 @@
 	pages = {103-114},
 	year = {2013},
 	doi = {10.1080/17538947.2011.608813},
-	URL = { 
-	http://dx.doi.org/10.1080/17538947.2011.608813},
 	eprint = { 
 	http://dx.doi.org/10.1080/17538947.2011.608813}
 }
@@ -4658,7 +4651,6 @@
 	pages = {457-475},
 	year = {2016},
 	doi = {10.1080/17538947.2015.1046510},
-	URL = {http://dx.doi.org/10.1080/17538947.2015.1046510},
 	eprint = {http://dx.doi.org/10.1080/17538947.2015.1046510}
 }
 @article{CaihongMa2014,
@@ -4670,7 +4662,6 @@
 	pages = {725-745},
 	year = {2014},
 	doi = {10.1080/17538947.2013.781238},
-	URL = {http://dx.doi.org/10.1080/17538947.2013.781238},
 	eprint = {http://dx.doi.org/10.1080/17538947.2013.781238}
 }
 @article{BiaoDeng2013,
@@ -4682,8 +4673,6 @@
 	pages = {219-232},
 	year = {2013},
 	doi = {10.1080/17538947.2011.625048},
-	URL = { 
-	http://dx.doi.org/10.1080/17538947.2011.625048},
 	eprint = { 
 	http://dx.doi.org/10.1080/17538947.2011.625048}
 }
@@ -4696,8 +4685,6 @@
 	pages = {492-509},
 	year = {2014},
 	doi = {10.1080/17538947.2012.748848},
-	URL = { 
-	http://dx.doi.org/10.1080/17538947.2012.748848},
 	eprint = { 
 	http://dx.doi.org/10.1080/17538947.2012.748848
 	}
@@ -4711,7 +4698,6 @@
 	pages = {1-20},
 	year = {2017},
 	doi = {10.1080/17538947.2017.1285968},
-	URL = {http://dx.doi.org/10.1080/17538947.2017.1285968},
 	eprint = {http://dx.doi.org/10.1080/17538947.2017.1285968}
 }
 @article{Su2016,
@@ -4723,7 +4709,6 @@
 	pages = {307-323},
 	year = {2017},
 	doi = {10.1080/17538947.2016.1227380},
-	URL = {http://dx.doi.org/10.1080/17538947.2016.1227380},
 	eprint = {http://dx.doi.org/10.1080/17538947.2016.1227380}
 }
 @article{Lu2016,
@@ -4735,7 +4720,6 @@
 	pages = {63-105},
 	year = {2016},
 	doi = {10.1080/17538947.2014.990526},
-	URL = {http://dx.doi.org/10.1080/17538947.2014.990526},
 	eprint = {http://dx.doi.org/10.1080/17538947.2014.990526}
 }
 @article{Liu2015,
@@ -4747,7 +4731,6 @@
 	pages = {334-344},
 	year = {2015},
 	doi = {10.1080/17538947.2013.872702},
-	URL = {http://dx.doi.org/10.1080/17538947.2013.872702},
 	eprint = {http://dx.doi.org/10.1080/17538947.2013.872702}
 }
 @article{Paninski2004,
@@ -4760,7 +4743,6 @@
 	year = {2004},
 	doi = {10.1088/0954-898X\_15\_4\_002},
 	note ={PMID: 15600233},
-	URL = {http://www.tandfonline.com/doi/abs/10.1088/0954-898X_15_4_002},
 	eprint = {http://www.tandfonline.com/doi/pdf/10.1088/0954-898X_15_4_002}
 }
 @article{AlvarezLopez2017,
@@ -4772,7 +4754,6 @@
 	pages = {5168-5185},
 	year = {2017},
 	doi = {10.1080/01431161.2017.1335910},
-	URL = {http://dx.doi.org/10.1080/01431161.2017.1335910},
 	eprint = {http://dx.doi.org/10.1080/01431161.2017.1335910}
 }
 @article{Bian2013,
@@ -4784,7 +4765,6 @@
 	pages = {6796-6836},
 	year = {2013},
 	doi = {10.1080/01431161.2013.808778},
-	URL = {http://dx.doi.org/10.1080/01431161.2013.808778},
 	eprint = {http://dx.doi.org/10.1080/01431161.2013.808778}
 }
 @phdthesis{libengue2013,
@@ -4814,7 +4794,6 @@
 	number = {1},
 	pages = {13-31},
 	doi = {10.1002/env.658},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/env.658},
 	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/env.658},
 }
 @article{Planinsic2018,
@@ -4873,7 +4852,6 @@
 	pages = "445--463",
 	publisher = "The Institute of Mathematical Statistics",
 	title = "Minimum {H}ellinger Distance Estimates for Parametric Models",
-	url = "https://doi.org/10.1214/aos/1176343842",
 	volume = "5",
 	year = "1977"
 }
@@ -4887,7 +4865,7 @@
 	pages = "1976--1992",
 	publisher = "The Institute of Mathematical Statistics",
 	title = "Minimum Distance Estimation in Random Coefficient Regression Models",
-	url = "https://doi.org/10.1214/aos/1176325767",
+	doi = "10.1214/aos/1176325767",
 	volume = "22",
 	year = "1994"
 }
@@ -4909,8 +4887,6 @@
 	year  = {1981},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01621459.1981.10477701},	
-	URL = { 
-	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1981.10477701},
 	eprint = { 
 	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1981.10477701
 	}	
@@ -4933,8 +4909,6 @@
 	year  = {1980},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01621459.1980.10477522},
-	URL = { 
-	http://amstat.tandfonline.com/doi/abs/10.1080/01621459.1980.10477522},
 	eprint = { 
 	http://amstat.tandfonline.com/doi/pdf/10.1080/01621459.1980.10477522}	
 }
@@ -4997,8 +4971,7 @@
 	pages = "291 - 302",
 	year = "1994",
 	issn = "0378-3758",
-	doi = "https://doi.org/10.1016/0378-3758(94)90025-6",
-	url = "http://www.sciencedirect.com/science/article/pii/0378375894900256",
+	doi = "10.1016/0378-3758(94)90025-6",
 	author = "T. P. Hettmansperger and I. Hueter and J. Hüsler",
 	keywords = "Robust, M-estimation, R-estimation, location-scale model, Cramér-von Mises statistic"
 }
@@ -5010,9 +4983,8 @@
 	pages = "1249 - 1272",
 	year = "2013",
 	issn = "0378-3758",
-	doi = "https://doi.org/10.1016/j.jspi.2013.03.018",
-	url = "http://www.sciencedirect.com/science/article/pii/S0378375813000633",
-	author = "Gábor J. Székely and Maria L. Rizzo",
+	doi = "10.1016/j.jspi.2013.03.018",
+	author = "G\'abor J. Sz\'ekely and Maria L. Rizzo",
 	keywords = "Energy distance, Goodness-of-fit, Multivariate independence, Distance covariance, Distance correlation"
 }
 @article{Song2001,
@@ -5023,7 +4995,7 @@
 	pages = "51--69",
 	year = "2001",
 	issn = "0378-3758",
-	doi = "https://doi.org/10.1016/S0378-3758(00)00169-5",
+	doi = "10.1016/S0378-3758(00)00169-5",
 	url = "http://www.sciencedirect.com/science/article/pii/S0378375800001695",
 	author = "Song, K.",
 	keywords = "Heavy tails, Intrinsic shape measure, Kurtosis, Loglikelihood moments, Multivariate , Rényi information, Spectrum, Trigamma function"
@@ -5060,7 +5032,6 @@
 	year  = {2014},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/03610918.2012.712184},
-	URL = {https://doi.org/10.1080/03610918.2012.712184},
 	eprint = {https://doi.org/10.1080/03610918.2012.712184},
 }
 @Article{Cichocki2010,
@@ -5113,7 +5084,6 @@
 	pages="3--26",
 	isbn="978-3-319-69416-0",
 	doi="10.1007/978-3-319-69416-0_1",
-	url="https://doi.org/10.1007/978-3-319-69416-0_1"
 }
 @INPROCEEDINGS{Khan2013,
 	author={S. {Khan} and R. {Guida}},
@@ -5151,7 +5121,7 @@
 	pages = "1041--1067",
 	publisher = "The Institute of Mathematical Statistics",
 	title = "The 1972 {W}ald Lecture Robust Statistics: A Review",
-	url = "https://doi.org/10.1214/aoms/1177692459",
+	doi = "10.1214/aoms/1177692459",
 	volume = "43",
 	year = "1972"
 }
@@ -5235,21 +5205,21 @@
 	author = {Jet Propulsion Laboratory-Nasa },
 	title = {Mision to Earth, {Seasat}},
 	year = {},
-	url = {URL{https://www.jpl.nasa.gov/missions/seasat/}},
+	url = {https://www.jpl.nasa.gov/missions/seasat/},
 	note = "[Web; accedido el 21-10-2019]",
 }
 @misc{Saocom,
 	author = { Invap-Saocom},
 	title = {Invap en la misión {SAOCOM}},
 	year = {},
-	url = {URL{http://saocom.invap.com.ar/}},
+	url = {http://saocom.invap.com.ar/},
 	note = "[Web; accedido el 21-10-2019]",
 }
 @misc{Invap,
 	author = { Invap-Saocom},
 	title = {Misión SAOCOM},
 	year = {},
-	url = {URL{http://www.invap.com.ar/es/espacial-y-gobierno/proyectos-espaciales/satelites-saocom.html/}},
+	url = {http://www.invap.com.ar/es/espacial-y-gobierno/proyectos-espaciales/satelites-saocom.html/},
 	note = "[Web; accedido el 21-10-2019]",
 }
 @Incollection{Goodman1975,
@@ -5264,7 +5234,6 @@
 	abstract="Since speckle plays an important role in many physical phenomena, it is essential to fully understand its statistical properties. Starting from the basic idea of a random walk in the complex plane, we derive the first-order statistics of the complex amplitude, intensity and phase of speckle. Sums of speckle patterns are also considered, the addition being either on an amplitude or on an intensity basis, with partially polarized speckle being a special case. Next we consider the sum of a speckle pattern and a coherent background, deriving the first-order probability density functions of intensity and phase. Attention is then turned to second-order statistics. The autocorrelation function and power spectral density are derived, both for a free-space propagation geometry and for an imaging geometry. In some cases the recorded speckle pattern may be spatially integrated or blurred, and accordingly consideration is given to the statistics of such patterns. Finally, the relationship between detailed surface structure and the resulting speckle pattern is explored, with emphasis on the effects of the surface autocorrelation function and the effects of finite surface roughness.",
 	isbn="978-3-662-43205-1",
 	doi="10.1007/978-3-662-43205-1_2",
-	url="https://doi.org/10.1007/978-3-662-43205-1_2"
 }
 @book{Quel1994,
 	author        = "Quel, E. and Rosito, C.",
@@ -5361,14 +5330,8 @@
 	year  = {2019},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01431161.2019.1569278},
-	
-	URL = { 
-	https://doi.org/10.1080/01431161.2019.1569278
-	
-	},
 	eprint = { 
-	https://doi.org/10.1080/01431161.2019.1569278
-	
+	https://doi.org/10.1080/01431161.2019.1569278	
 	}
 	
 }
@@ -5437,7 +5400,7 @@
 	pages = "434--438",
 	publisher = "The Institute of Mathematical Statistics",
 	title = "A Useful Convergence Theorem for Probability Distributions",
-	url = "https://doi.org/10.1214/aoms/1177730390",
+	doi = "10.1214/aoms/1177730390",
 	volume = "18",
 	year = "1947"
 }
@@ -5466,14 +5429,8 @@
 	year  = {1983},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/02664768300000017},
-	
-	URL = { 
-	https://doi.org/10.1080/02664768300000017
-	
-	},
 	eprint = { 
 	https://doi.org/10.1080/02664768300000017
-	
 	}
 	
 }
@@ -5559,7 +5516,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	Title = {Sampling from the $\mathcal{G}_{I}^0$ Distribution},
 	Volume = {24},
 	Year = {2018},
-	Bdsk-Url-1 = {https://doi.org/10.1515/mcma-2018-2023},
+	doi = {10.1515/mcma-2018-2023},
 }
 
 @Article{salicruetal1993,
@@ -5591,7 +5548,6 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	year  = {1991},
 	publisher = {Taylor & Francis},
 	doi = {10.1080/01431169108929656},
-	URL = {	https://doi.org/10.1080/01431169108929656},
 }
 
 @Article{Menendez1997,
@@ -5638,4 +5594,19 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	volume  = {58},
 	doi     = {10.1109/TGRS.2019.2958125},
 	groups  = {Journal Article},
+}
+
+
+@Article{PolarimetricSegmentationBSplinesMSSP,
+	author     = {A. C. Frery and Jacobo-Berlles, J. and Gambini, J. and Mejail, M.},
+	journal    = {Multidimensional Systems and Signal Processing},
+	title      = {Polarimetric {SAR} Image Segmentation with {B-Splines} and a New Statistical Model},
+	year       = {2010},
+	pages      = {319--342},
+	volume     = {21},
+	abstract   = {We present an approach for polarimetric Synthetic Aperture Radar (SAR) image region boundary detection based on the use of B-Spline active contours and a new model for polarimetric SAR data: the GHP distribution. In order to detect the boundary of a region, initial B-Spline curves are specified, either automatically or manually, and the proposed algorithm uses a deformable contours technique to find the boundary. In doing this, the parameters of the polarimetric GHP model for the data are estimated, in order to find the transition points between the region being segmented and the surrounding area. This is a local algorithm since it works only on the region to be segmented. Results of its performance are presented.},
+	arxiv      = {1207.3944},
+	bdsk-url-1 = {https://doi.org/10.1007/s11045-010-0113-4},
+	doi        = {10.1007/s11045-010-0113-4},
+	groups     = {Journal Article},
 }
