Listo para mandar

--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -3656,7 +3656,7 @@
 	booktitle = {Advances in Electronics and Electron Physics},
 	publisher = {Academic Press},
 	volume = {76},
-	pages = {327 - 413},
+	pages = {327--413},
 	year = {1989},
 	issn = {0065-2539},
 	doi = {https://doi.org/10.1016/S0065-2539(08)60580-6}
@@ -4609,11 +4609,11 @@
 }
 @article{Yinghui2017,
 	author = {Yang, Y. and Chen, Q. and Xu, Q. and Zhang, Y. and Yong, Q. and Liu, G.},
-	title = {Coseismic surface deformation of the 2014 {Napa} earthquake mapped by Sentinel-1A SAR and accuracy assessment with {COSMO-SkyMed} and {GPS} data as cross validation},
+	title = {Coseismic surface deformation of the 2014 {Napa} earthquake mapped by {S}entinel-1{A} {SAR} and accuracy assessment with {COSMO-SkyMed} and {GPS} data as cross validation},
 	journal = {International Journal of Digital Earth},
-	volume = {0},
-	number = {0},
-	pages = {1-17},
+	volume = {10},
+	number = {12},
+	pages = {1197--1213},
 	year = {2017},
 	doi = {10.1080/17538947.2017.1299806},
 	eprint = {http://dx.doi.org/10.1080/17538947.2017.1299806}
